# kata

./: .gitignore  CONTRIBUTING.md  README.md  REGISTRATION_RESULT.md  pyproject.toml
docs/: SCORING.md  benchmark-evaluation.md  github-automation.md  submissions.md  system-workflow.md
evals/e35ventura__taopedia-articles/: frontier.json
evals/e35ventura__taopedia-articles/prompts/contributor/: frontier.md
kata/: ast_utils.py  benchmarks.py  challenge.py  cli.py  frontier.py  lane_state.py  public_artifacts.py  screening.py  submissions.py  util.py
kata/evaluators/: sn60_bitsec.py
kings/e35ventura__taopedia-articles/contributor/: agent.py  king.json
promptforge/: challenge.py  cli.py  eval_pack.py  eval_runner.py  frontier.py  generator.py  reporting.py
tests/: test_cli.py  test_eval_pack.py  test_frontier.py  test_reporting.py  test_scoring.py  test_submissions.py
