[project]
name = "promptforge"
version = "0.1.0"
description = "Objective prompt optimization for repo-specific coding agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "PromptForge maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
promptforge = "promptforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
